Fix album time position on narrow mobile views

--- a/MaterialSkin/HTML/material/html/css/mobile.css
+++ b/MaterialSkin/HTML/material/html/css/mobile.css
@@ -419,7 +419,7 @@
   margin-right:-6px;
  }
  .pq-atime {
-  margin-right:11px;
+  margin-right:15px;
  }
  .np-menu-fab {
   right:5px!important;
